--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li class="nav-items logo"><img src="./img/duck.png" alt="profile"></li>
             <h3>Quacker</h3>
           </div>
-          <li class="nav-items current-page"><a href=""><i class="fas fa-home"></i> Home</a></li>
+          <li class="nav-items current-page"><a href="#"><i class="fas fa-home"></i> Home</a></li>
         </ul>
       </div>
       <div class="profile-box">
